# syrin-python

./: .gitignore  CHANGELOG.md  README.md  openmemory.md  pre-commit.sh  pyproject.toml
.github/workflows/: ci.yml  publish.yml
.syrin/: .dev-history
docs/: ARCHITECTURE.md  README.md  advanced-topics.md  agent-registry.md  api-reference.md  architecture.md  budget-control.md  checkpoint.md  concepts.md  context.md  dynamic-pipeline.md  event-bus.md  faq.md  getting-started.md  guardrails.md  installation.md  introduction.md  mcp.md  memory.md  models.md  multi-agent.md  multimodal.md  observability.md  quick-start.md  ratelimit.md  reference.md  remote-config.md  routing.md  serving.md  structured-output.md  template-engine.md  troubleshooting.md
docs/advanced/: custom-context.md  custom-model.md  custom-observability.md  testing.md  (+6 more)
examples/: README.md  agent_lifecycle.py  debug_example.py  debugger_example.py  getting_started.ipynb  integration_v0110.py  main.py  master_dynamic_pipeline.py  simple_events.py  structured_output.py
examples/ipo_drafting_agent/: DRHP_Drafting_Agent.ipynb  README.md  output_draft_section.docx  output_draft_section.md  output_intermediate.json  pyproject.toml  run.py  serve.py
examples/ipo_drafting_agent/ipo_agent/: __init__.py  agent.py  models.py
examples/resume_agent/: ARCHITECTURE.md  README.md  agent.py  pyproject.toml  requirements.txt  syrin_processor.py  voice_server.py
examples/resume_agent/data/: about.md  skills.yaml
examples/resume_agent/data/projects/: demo-project.md
tests/: test_config.py  test_integration.py
(+990 files in other folders)
